[project]
name = "bioagents"
version = "0.1.0"
description = "BIOAgents – Medical/Biomedical Agent GYM Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    # ---- Core ----
    "pydantic>=2.0,<3",
    "gymnasium>=1.0",
    "numpy>=1.24",

    # ---- LLM / Model serving ----
    "transformers>=4.40",
    "torch>=2.1",
    "accelerate>=0.30",
    "vllm>=0.4",

    # ---- Training (RL + SFT) ----
    "trl>=0.8",
    "deepspeed>=0.14",
    "peft>=0.10",

    # ---- Evaluation metrics ----
    "rouge-score>=0.1",
    "nltk>=3.8",
    "bert-score>=0.3",
    "scikit-learn>=1.3",

    # ---- Data / IO ----
    "datasets>=2.18",
    "pandas>=2.0",
    "pillow>=10.0",

    # ---- Logging & Experiment tracking ----
    "wandb>=0.16",
    "loguru>=0.7",
    "rich>=13.0",

    # ---- Misc ----
    "httpx>=0.27",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipython>=8.0",
    "jupyter>=1.0",
]
flash = [
    "flash-attn>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bioagents"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
